update detail produk, keranjang

--- a/pages/detail-produk.html
+++ b/pages/detail-produk.html
@@ -58,7 +58,7 @@
         <div class="row d-flex justify-content-between">
 
             <div class="col col-4 detail-produk">
-                <img src="/img/Klanting.png" alt="" width="400px">
+                <img src="/img/Klanting.png" alt="" width="300px">
             </div>
 
             <div class="col col-5 detail-produk">
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="d-flex flex-column mx-3">
-                    <a type="button" class="btn btn-oren mb-2">+Keranjang</a>
+                    <a type="button" href="/pages/keranjang.html" class="btn btn-oren mb-2">+Keranjang</a>
                     <a type="button" href="/pages/checkout.html" class="btn btn-outline-oren">Beli Sekarang</a>
                 </div>
 
