--- a/pages/keranjang.html
+++ b/pages/keranjang.html
@@ -52,19 +52,19 @@
 
     <div class="container">
 
-        <div class="m-nav mb-5">
+        <div class="m-nav mb-3">
             <h3 class="fw-700">Keranjang Anda</h3>
         </div>
 
 
-        <div class="row">
+        <div class="row px-1 py-3">
             <div class="col-7">
                 <div class="row d-flex align-items-center aside ">
                     <div class="col col-4 d-flex align-items-center">
                         <div class="form-check me-3">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
-                        <img  src="/img/Klanting.png" width="170px" alt="">
+                        <img  src="/img/Klanting.png" width="150px" alt="">
                     </div>
 
 
@@ -88,11 +88,105 @@
             </div>
 
             <div class="col"></div>
+            
+        <!-- <div class="row px-1 py-3">
+            <div class="col-7">
+                <div class="row d-flex align-items-center aside ">
+                    <div class="col col-4 d-flex align-items-center">
+                        <div class="form-check me-3">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                        <img  src="/img/getuk.png" width="150px" alt="">
+                    </div>
+
+
+                    <div class="col col-5">
+                        <span class="fs-3 fw-700">Getuk Goreng</span>
+                        <p class="text-muted mb-3">Berat Satuan <span>120 gram</span></p>
+                        <span class="fs-4 fw-500">Rp18.000</span>
+                        <div class="d-flex align-items-center">
+                            <button type="button" class="btn btn-light" id="min">-</button>
+                            <p class="my-auto mx-3" id="jumlah">0</p>
+                            <button type="button" class="btn btn-light" id="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="col col-3 d-flex flex-column">
+                        <a class="btn btn-outline-oren mb-2" type="submit" href="#">Hapus</a>
+                        <a class="btn btn-oren " type="submit" href="#">checkout</a>
+                    </div>
+                </div>
+                <div class="row"></div>
+                <div class="row"></div>
+            </div>
+
+            <div class="col"></div>
         </div>
+        
+        <div class="row px-1 py-3">
+            <div class="col-7">
+                <div class="row d-flex align-items-center aside ">
+                    <div class="col col-4 d-flex align-items-center">
+                        <div class="form-check me-3">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                        <img  src="/img/telurasin.png" width="150px" alt="">
+                    </div>
+
+
+                    <div class="col col-5">
+                        <span class="fs-3 fw-700">Telur Asin</span>
+                        <p class="text-muted mb-3">Berat Satuan <span>1 butir</span></p>
+                        <span class="fs-4 fw-500">Rp3.000</span>
+                        <div class="d-flex align-items-center">
+                            <button type="button" class="btn btn-light" id="min">-</button>
+                            <p class="my-auto mx-3" id="jumlah">0</p>
+                            <button type="button" class="btn btn-light" id="plus">+</button>
+                        </div>
+                    </div>
+                    <div class="col col-3 d-flex flex-column">
+                        <a class="btn btn-outline-oren mb-2" type="submit" href="#">Hapus</a>
+                        <a class="btn btn-oren " type="submit" href="#">checkout</a>
+                    </div>
+                </div>
+                <div class="row"></div>
+                <div class="row"></div>
+            </div>
+
+            <div class="col"></div>
+         -->
+        <div class="col-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="fw-700">Ringkasan Belanja</h5>
+                    <div class="row my-5" style="line-height: 15px;">
+                        <div class="col-7">
+                            <p>Total Harga Barang</p>
+                            <p>Ongkos Kirim</p>
+                            <p>Biaya Jasa Aplikasi</p>
+                            <h5 class="mt-5">Total Tagihan</h5>
+                        </div>
+
+                        <div class="col color-oren fw-700">
+                            <p id="harga"> Rp13.000</p>
+                            <p id="ongkir"> Rp4.000</p>
+                            <p id="jasa"> Rp1.000</p>
+                            <h5 class="mt-5" id="total">0</h5>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column ">
+                        <a type="button" href="/pages/sukses.html" class="btn btn-oren mb-2">Bayar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
 
         <!-- Footer -->
 
-        <!-- <div class="footer overflow-hidden margin-top">
+        <div class="footer overflow-hidden margin-top">
         <div class="container my-5">
             <div class="row">
                 <div class="col col-8">
@@ -128,7 +222,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
