--- a/pages/notifikasi.html
+++ b/pages/notifikasi.html
@@ -43,9 +43,17 @@
                         <a class="nav-link" href="#">Notifikasi</a>
                     </li>
                 </ul>
-                <div class="nav-button">
-                    <a class="btn btn-oren" type="submit" href="/login-signup/login.html">Masuk</a>
-                    <a class="btn btn-outline-oren" type="submit" href="/login-signup/daftar.html">Daftar</a>
+                <div class="row d-flex align-items-center">
+                    <div class="dropdown">
+                        <button class="btn bg-tp dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img src="/img/profile-icon.png" alt="">
+                            Zahrotul </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/pages/profile.html">Pengaturan</a></li>
+                            <li><a class="dropdown-item" href="/index.html">Keluar</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -81,10 +89,7 @@
                         <a class="" href="/pages/notifikasi.html" style="text-decoration: none;">
                             <h6 class="color-oren fw-700"><i class="bi bi-bell me-3 fs-5 fw-700"></i>Notifikasi</h6>
                         </a>
-                        <a class="" href="" style="text-decoration: none;">
-                            <h6 class="text-dark fw-700"><i class="bi bi-shop me-3 fs-5 fw-700"></i>Menu Penjual</h6>
-                        </a>
-                        <a class="" href="" style="text-decoration: none;">
+                        <a class="" href="/pages/popup-logout.html" style="text-decoration: none;">
                             <h6 class="text-dark fw-700"><i class="bi bi-box-arrow-left me-3 fs-5 fw-700"></i>Keluar
                             </h6>
                         </a>
