--- a/pages/profile.html
+++ b/pages/profile.html
@@ -41,9 +41,17 @@
                         <a class="nav-link" href="#">Notifikasi</a>
                     </li>
                 </ul>
-                <div class="nav-button">
-                    <a class="btn btn-oren" type="submit" href="#">Masuk</a>
-                    <a class="btn btn-outline-oren" type="submit" href="#">Daftar</a>
+                <div class="row d-flex align-items-center">
+                    <div class="dropdown">
+                        <button class="btn bg-tp dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img src="/img/profile-icon.png" alt="">
+                            Zahrotul </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/pages/profile.html">Pengaturan</a></li>
+                            <li><a class="dropdown-item" href="/index.html">Keluar</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,10 +87,7 @@
                         <a class="" href="/pages/notifikasi.html" style="text-decoration: none;">
                             <h6 class="text-dark fw-700"><i class="bi bi-bell me-3 fs-5 fw-700"></i>Notifikasi</h6>
                         </a>
-                        <a class="" href="" style="text-decoration: none;">
-                            <h6 class="text-dark fw-700"><i class="bi bi-shop me-3 fs-5 fw-700"></i>Menu Penjual</h6>
-                        </a>
-                        <a class="" href="" style="text-decoration: none;">
+                        <a class="" href="/pages/popup-logout.html" style="text-decoration: none;">
                             <h6 class="text-dark fw-700"><i class="bi bi-box-arrow-left me-3 fs-5 fw-700"></i>Keluar
                             </h6>
                         </a>
@@ -141,7 +146,7 @@
 
                         <div class="d-flex justify-content-end gap-3 ">
                             <a class="btn btn-outline-oren px-5" type="submit" href="#">Edit</a>
-                            <a class="btn btn-oren px-4" type="submit" href="#">Simpan</a>
+                            <a class="btn btn-oren px-4" type="submit" href="/pages/popup-simpan-profile.html">Simpan</a>
                         </div>
 
                     </div>
